# zerg_tui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: COMMANDS.md  PROJECT_VISION.md  TECHNICAL_DECISIONS.md
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: mock_server.py
tests/integration/: __init__.py  test_full_flow.py
tests/unit/: __init__.py  test_client.py  test_widgets.py
ztc/: __init__.py  app.py  client.py  config.py  events.py  exceptions.py  main.py
ztc/widgets/: __init__.py  chat.py  execution.py  review.py  status.py
